     track selection.  See disorder(1) for details.
   - there is a new configuration item replay_min defining the minimum
     time before a played track can be picked at random.  The default is
     8 hours (which matches the earlier behaviour).

** Disobedience

There is now a new user management window.  From here you can add and
remove users or modify their settings.

* Changes up to version 3.0.2

Builds --without-server should work again.

The web interface is a bit more liberal in the cookie value syntax it
will accept.

Clients fail more gracefully if no password is available.

* Changes up to version 3.0.1

Debian upgrades from 2.0.x should now work better.

* Changes up to version 3.0

Important!  See README.upgrades when upgrading.

** Platforms And Installation

Mac OS X and FreeBSD are somewhat supported.  There is now a bash script
in scripts/setup which will automate the setup after 'make install'.

** Server

Users are now stored in the database rather than a configuration file.

The server now has a built-in list of stopwords and players, so only
additions to these need be mentioned in the configuration file.

The default inter-track gap is now 0s.

How sound is played is now controlled via the new 'api' configuration
command.  This also controls how the volume is set, which now works with
ALSA as well as OSS.

A bug in the MP3 decoder was fixed (also in 2.0.4).

** Web Interface

The web interface now uses cookies to remember user identity, and allows
online registration of new users.  Also it is no longer necessary to
manually specify the URL of the web interface (but you can override it
if you don't like the value it figures out).

It is possible to allow users to register via the web interface.

The web interface's browser support has been improved.  It has been
tested with Firefox 2, Safari 3, Konqueror 3, Internet Explorer 7 and
Opera 9.

** Disobedience

A bug which would cause a crash if you attempt to rearrange the queue